
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
unsigned char
pg_ascii_toupper(unsigned char ch)
{
 if (ch >= 'a' && ch <= 'z')
  ch += 'A' - 'a';
 return ch;
}
